feat : pembuatan login dan daftar dan url endpoint

--- a/daftar.html
+++ b/daftar.html
@@ -21,37 +21,29 @@
         <a class="uk-logo uk-text-primary uk-text-bold" href="index.html">Resep Makanan</a>
       </div>
       <div class="uk-text-center uk-margin-medium-bottom">
-        <h1 class="uk-h2 uk-letter-spacing-small">Create an Account</h1>
+        <h1 class="uk-h2 uk-letter-spacing-small">Buat Akun Anda</h1>
       </div>
-      <div data-uk-grid class="uk-child-width-auto uk-grid-small uk-flex uk-flex-center uk-margin">
-        <div>
-          <a href="#" data-uk-icon="icon: facebook" class="uk-icon-button uk-icon-button-large facebook"></a>
-        </div>
-        <div>
-          <a href="#" data-uk-icon="icon: google-plus" class="uk-icon-button uk-icon-button-large google-plus"></a>
-        </div>
-        <div>
-          <a href="#" data-uk-icon="icon: linkedin" class="uk-icon-button uk-icon-button-large linkedin"></a>
-        </div>
-      </div>    
-      <div class="uk-text-center uk-margin">
-        <p class="uk-margin-remove">Or use your email for registration:</p>
-      </div>
+      
+      
       <form class="uk-text-center">
         <div class="uk-width-1-1 uk-margin">
-          <label class="uk-form-label" for="name">Full name</label>
-          <input id="name" class="uk-input uk-form-large uk-border-pill uk-text-center" type="text" placeholder="Tom Atkins">
+          <label class="uk-form-label" for="name">Nama Lengkap</label>
+          <input id="nama" class="uk-input uk-form-large uk-border-pill uk-text-center" type="text" placeholder="Tom Atkins">
         </div>
         <div class="uk-width-1-1 uk-margin">
           <label class="uk-form-label" for="email">Email</label>
           <input id="email" class="uk-input uk-form-large uk-border-pill uk-text-center" type="email" placeholder="tom@company.com">
         </div>
         <div class="uk-width-1-1 uk-margin">
-          <label class="uk-form-label" for="password">Password</label>
+          <label class="uk-form-label" for="username">Username</label>
+          <input id="username" class="uk-input uk-form-large uk-border-pill uk-text-center" type="username" placeholder="tom22">
+        </div>
+        <div class="uk-width-1-1 uk-margin">
+          <label class="uk-form-label" for="password">Kata Sandi</label>
           <input id="password" class="uk-input uk-form-large uk-border-pill uk-text-center" type="password" placeholder="Min 8 characters">
         </div>
         <div class="uk-width-1-1 uk-text-center">
-          <button class="uk-button uk-button-primary uk-button-large">Sign Up</button>
+          <button id="signInButton" type="button" class="uk-button uk-button-primary uk-button-large">Daftar</button>
         </div>
         <div class="uk-width-1-1 uk-margin uk-text-center">
           <p class="uk-text-small uk-margin-remove">By signing up you agree to our <a class="uk-link-border" href="#">terms</a> of service.</p>
@@ -71,7 +63,7 @@
           <p>Already signed up, enter your details and start cooking your first meal today</p>
         </div>
         <div class="uk-width-1-1 uk-text-center">
-          <a href="sign-in.html" class="uk-button uk-button-primary uk-button-large">Sign In</a>
+          <a href="index.html" class="uk-button uk-button-primary uk-button-large">Masuk</a>
         </div>
       </div>
     </div>
@@ -79,6 +71,8 @@
 </div>
 
 </body>
+<script type="module" src="./js/register.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </html>
 
