--- a/index.html
+++ b/index.html
@@ -509,6 +509,6 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+<script type="module" src="./js/recipe/get-all-resep.js"></script>
 
 </html>
